--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,13 +2,16 @@
 galaxy_info:
   role_name: python_install
   author: Jørn Ivar Holland
-  description: Install Python from source.
+  description: Build, compile and install Python from source code.
   license: BSD-3-Clause
   min_ansible_version: '2.9'
   platforms:
     - name: EL
       versions:
         - all
+    - name: Debian
+      versions:
+        - buster
   galaxy_tags:
     - system
     - python
