--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,7 +1,8 @@
 ---
 # vars file for python_install
 
-python_prefix: /opt/python/{{ python_release_version }}
+python_prefix: /opt/python/{{ python_version }}
+python_main_version: "{{ python_version | regex_search('[0-9]*[.][0-9]+') }}"
 
 redhat_os_packages:
   - wget
