--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,8 +1,8 @@
 ---
 # vars file for python_install
 
-python_prefix: /opt/python/{{ python_version }}
-python_main_version: "{{ python_version | regex_search('[0-9]*[.][0-9]+') }}"
+python_prefix: /opt/python/{{ python_version }}  # Installation location
+python_main_version: "{{ python_version | regex_search('[0-9]*[.][0-9]+') }}"  # Example: 3.11.2 --> 3.11
 
 redhat_os_packages:
   - wget
