--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,8 @@
 ---
 galaxy_info:
-  role_name: python_install
+  role_name: python
   author: Jørn Ivar Holland
-  description: Build, compile and install Python from source code.
+  description: Donwload, build, compile and install Python from source code.
   license: BSD-3-Clause
   min_ansible_version: '2.12'
   platforms:
