--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,5 @@ python_release_version: 3.11.2
 python_install_dir: /opt/python/{{ python_release_version }}
 
 python_url: https://www.python.org/ftp/python/{{ python_release_version }}/{{ python_archive }}  # URL to download Python from.
+
+python_jobs: "{{ ansible_facts.processor_nproc }}"  # Use all CPUs for compilation.
