--- a/tasks/Setup_Redhat.yml
+++ b/tasks/Setup_Redhat.yml
@@ -1,16 +1,15 @@
 ---
 # tasks file for python
 
-- name: Debian | Upgrade all OS packages.
+- name: Setup_RedHat | Upgrade all OS packages.
   # noqa package-latest
-  ansible.builtin.apt:
+  ansible.builtin.dnf:
     name: '*'
-    update_cache: true
     state: latest
   become: true
 
-- name: Debian | Install required OS packages.
-  ansible.builtin.apt:
+- name: Setup_RedHat | Install required OS packages.
+  ansible.builtin.dnf:
     name: "{{ item }}"
     state: present
   loop: "{{ python_os_packages }}"
