--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,3 +8,5 @@ python_install_dir: /opt/python/{{ python_release_version }}
 python_url: https://www.python.org/ftp/python/{{ python_release_version }}/{{ python_archive }}  # URL to download Python from.
 
 python_jobs: "{{ ansible_facts.processor_nproc }}"  # Use all CPUs for compilation.
+
+python_state: selected  # Set installed Python as selected alternative for the group.
