--- a/tasks/Setup_Redhat.yml
+++ b/tasks/Setup_Redhat.yml
@@ -10,7 +10,9 @@
 
 - name: Setup_RedHat | Install required OS packages.
   ansible.builtin.dnf:
-    name: "{{ item }}"
+    name: "{{ python_item }}"
     state: present
   loop: "{{ python_os_packages }}"
+  loop_control:
+    loop_var: python_item
   become: true
