--- a/tasks/Setup_Debian.yml
+++ b/tasks/Setup_Debian.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for python
 
-- name: setup_debian | Upgrade all OS packages.
+- name: Setup_Debian | Upgrade all OS packages.
   # noqa package-latest
   ansible.builtin.apt:
     name: '*'
@@ -9,7 +9,7 @@
     state: latest
   become: true
 
-- name: setup_debian | Install required OS packages.
+- name: Setup_Debian | Install required OS packages.
   ansible.builtin.apt:
     name: "{{ python_item }}"
     state: present
